package rina.messages;
option java_package="rina.utils.serialization.googleprotobuf.datatransferconstants";

message dataTransferConstants_t{					//Specifies the constants for EFCP to use
	optional uint32 maxPDUSize = 1;					//The maximum size of a PDU, in bytes
	optional uint32 addressLength = 2;				//The length of the address field in EFCP PDUs, in bytes
	optional uint32 portIdLength = 3;					//The length of the portId field in EFCP PDUs, in bytes
	optional uint32 qosidLength = 4;					//The length of the QoS id field in EFCP PDUs, in bytes
	optional uint32 sequenceNumberLength = 5;			//The length of the sequenceNumber field in EFCP PDUs, in bytes
	optional uint32 lengthLength = 6;					//The length of the length field in EFCP PDUs, in bytes
	optional uint64 seqRolloverThreshold = 7;		//The sequence number after which the Flow Allocator instance should create a new EFCP connection
	optional uint32 maxPDULifetime = 8;				//The maximum time a PDU can "live" within the DIF, in milliseconds
}